--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="tr">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="css/main.css" rel="stylesheet" type="text/css">
     <title>Mustafa Katipoglu</title>
@@ -17,12 +19,32 @@
                 </div>
                 <div class="col-md-8">
                     <section class="menu">
-                        
+                        <a class="btn h-btn" href="#">Home</a>
+                        <a class="btn h-btn" href="#">Portfolio</a>
+                        <a class="btn h-btn" href="#">Blog</a>
+                        <a class="btn h-btn" href="#">About</a>
                     </section>
                 </div>
             </div>
         </div>
     </header>
-    
+    <section class="myjumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="bytag">
+                        <h2>I love to programming</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 pull-right">
+                    <div class="bytag">
+                        <h2>Everything is just starting</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
