add portfolio skeleton

--- a/index.html
+++ b/index.html
@@ -46,5 +46,41 @@
             </div>
         </div>
     </section>
+    <section class="h-portfolio">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-7 pull-left"></div>
+                <div class="col-md-5 pull-right">
+                    <div class="h-portf-btns">
+                        <a class="btn p-btn">Html &#126; CSS</a>
+                        <a class="btn p-btn">JavaScript</a>
+                        <a class="btn p-btn">Jquery</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                
+                <div class="col-md-1 portf-item">
+                    <img src="http://via.placeholder.com/250x360/DEDDC9/8E8F90" alt="portfolio project">
+                </div>
+                <div class="col-md-1 portf-item">
+                    <img src="http://via.placeholder.com/250x360/DEDDC9/8E8F90" alt="portfolio project">
+                </div>
+                <div class="col-md-1 portf-item">
+                    <img src="http://via.placeholder.com/250x360/DEDDC9/8E8F90" alt="portfolio project">
+                </div>
+                <div class="col-md-1 portf-item">
+                    <img src="http://via.placeholder.com/250x360/DEDDC9/8E8F90" alt="portfolio project">
+                </div>
+                <div class="col-md-1 portf-item">
+                    <img src="http://via.placeholder.com/250x360/DEDDC9/8E8F90" alt="portfolio project">
+                </div>
+                <div class="col-md-7 portf-show pull-right">
+                    <img src="http://via.placeholder.com/320x600/DEDDC9/8E8F90" alt="portfolio project big photo">
+                </div>
+                
+            </div>
+        </div>
+    </section>
 </body>
 </html>
