--- a/index.html
+++ b/index.html
@@ -82,5 +82,43 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 pull-left">
+                    <ul class="f-nav">
+                        <h4>Menu</h4>
+                        <a href="#"><li>Home</li></a>
+                        <a href="#"><li>Portfolio</li></a>
+                        <a href="#"><li>Blog</li></a>
+                        <a href="#"><li>About</li></a>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                        <p class="f-copy">&copy;2017</p>
+                </div>
+                <div class="col-md-4 pull-right">
+                    <div class="f-social">
+                        <h4>Social Links</h4>
+                        <figure>
+                            <a href="mailto:mustafakatipoglu98@hotmail.com"><img src="img/email.svg" alt="send email"></a>
+                        </figure>
+                        <figure>
+                            <a href="https://www.facebook.com/m.ktpql"><img src="img/facebook-logo.svg" alt="facebook social icon"></a>
+                        </figure>
+                        <figure>
+                            <a href="https://github.com/herolenk"><img src="img/github-logo.svg" alt="github social icon"></a>
+                        </figure>
+                        <figure>
+                            <a href="https://www.linkedin.com/in/mustafakatipoglu/"><img src="img/linkedin.svg" alt="linkedin social icon"></a>
+                        </figure>
+                        <figure>
+                            <a href="https://medium.com/@herolenk"><img src="img/medium.svg" alt="medius social icon"></a>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
