make the page portfolio page and create index.html for the site

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="../css/main.css" rel="stylesheet" type="text/css">
     <title>Mustafa Katipoglu</title>
 </head>
 <body>
@@ -19,8 +19,8 @@
                 </div>
                 <div class="col-md-8">
                     <section class="menu">
-                        <a class="btn h-btn" href="index.html">Home</a>
-                        <a class="btn h-btn" href="pages/portfolio.html">Portfolio</a>
+                        <a class="btn h-btn" href="../index.html">Home</a>
+                        <a class="btn h-btn" href="portfolio.html">Portfolio</a>
                         <a class="btn h-btn" href="#">Blog</a>
                         <a class="btn h-btn" href="#">About</a>
                     </section>
@@ -48,7 +48,33 @@
     </section>
     <section class="h-portfolio">
         <div class="container">
-            
+            <div class="row">
+                <div class="col-md-7 pull-left"></div>
+                <div class="col-md-5 pull-right">
+                    <div class="h-portf-btns">
+                        <a class="btn p-btn">Html &#126; CSS</a>
+                        <a class="btn p-btn">JavaScript</a>
+                        <a class="btn p-btn">Jquery</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                    <div class="col-md-1 portf-item">
+                        <div class="p-item" id="item1"></div>
+                    </div>
+                    <div class="col-md-1 portf-item">
+                        <div class="p-item" id="item2"></div>
+                    </div>
+                    <div class="col-md-1 portf-item">
+                        <div class="p-item" id="item3"></div>
+                    </div>
+                    <div class="col-md-1 portf-item">
+                        <div class="p-item" id="item4"></div>
+                    </div>
+                    <div class="col-md-1 portf-item">
+                        <div class="p-item" id="item5"></div>
+                    </div>
+            </div>
         </div>
     </section>
     <footer>
@@ -70,19 +96,19 @@
                     <div class="f-social">
                         <h4>Social Links</h4>
                         <figure>
-                            <a href="mailto:mustafakatipoglu98@hotmail.com"><img src="img/email.svg" alt="send email"></a>
+                            <a href="mailto:mustafakatipoglu98@hotmail.com"><img src="../img/email.svg" alt="send email"></a>
                         </figure>
                         <figure>
-                            <a href="https://www.facebook.com/m.ktpql"><img src="img/facebook-logo.svg" alt="facebook social icon"></a>
+                            <a href="https://www.facebook.com/m.ktpql"><img src="../img/facebook-logo.svg" alt="facebook social icon"></a>
                         </figure>
                         <figure>
-                            <a href="https://github.com/herolenk"><img src="img/github-logo.svg" alt="github social icon"></a>
+                            <a href="https://github.com/herolenk"><img src="../img/github-logo.svg" alt="github social icon"></a>
                         </figure>
                         <figure>
-                            <a href="https://www.linkedin.com/in/mustafakatipoglu/"><img src="img/linkedin.svg" alt="linkedin social icon"></a>
+                            <a href="https://www.linkedin.com/in/mustafakatipoglu/"><img src="../img/linkedin.svg" alt="linkedin social icon"></a>
                         </figure>
                         <figure>
-                            <a href="https://medium.com/@herolenk"><img src="img/medium.svg" alt="medius social icon"></a>
+                            <a href="https://medium.com/@herolenk"><img src="../img/medium.svg" alt="medius social icon"></a>
                         </figure>
                     </div>
                 </div>
@@ -90,6 +116,6 @@
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="code/code.js"></script>
+    <script src="../code/code.js"></script>
 </body>
 </html>
