add portfolio section to homepage

--- a/index.html
+++ b/index.html
@@ -28,26 +28,27 @@
             </div>
         </div>
     </header>
-    <section class="myjumbotron">
+    <section class="myjumbotron" id="homejumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <div class="bytag">
-                        <h2>I love to programming</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 pull-right">
-                    <div class="bytag">
-                        <h2>Everything is just starting</h2>
+                <div class="col-md-4 pull-left">
+                    <div class="bytag h-bytag">
+                        <h2>"Computer Science Student"</h2>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="h-portfolio">
-        <div class="container">
+    <section class="h-portfolio" id="home-portfolio">
+        <div class="container-fluid">
+            <div class="col-md-6">
+                <h2>Do you want to look a bit closer ?</h2>
+                    <a href="pages/portfolio.html" class="btn h-btn" id="homeportfbtn"> See My Portfolio</a>
+            </div>
+        </div>
+    </section>
+    <section class="h-blog">
+        <div class="container-fluid">
             
         </div>
     </section>
