add about me section

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <section class="myjumbotron" id="homejumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 pull-left">
+                <div class="col-md-6">
                     <div class="bytag h-bytag">
-                        <h2>"Computer Science Student"</h2>
+                        <h2>"From Computer Science Student"</h2>
                     </div>
                 </div>
             </div>
@@ -43,13 +43,35 @@
         <div class="container-fluid">
             <div class="col-md-6">
                 <h2>Do you want to look a bit closer ?</h2>
-                    <a href="pages/portfolio.html" class="btn h-btn" id="homeportfbtn"> See My Portfolio</a>
+                <a href="pages/portfolio.html" class=""> See My Portfolio</a>
             </div>
         </div>
     </section>
     <section class="h-blog">
         <div class="container-fluid">
-            
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="bho">
+                        <h2>Connect to my world</h2>
+                        <a href="#" class=""> Blog</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="h-about">
+        <div class="container-fluid">
+            <h2>Mustafa Katipoğlu</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="h-a-m">
+                        <img src="img/me.jpg" alt="my photograph">
+                        <p>Hey, I'm an full stack web developer student from Istanbul , Turkey...</p>
+                        <a href="#" class="">About Me</a>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </section>
     <footer>
