--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         </div>
     </section>
     <section class="h-portfolio" id="home-portfolio">
-        <div class="container-fluid">
-            <div class="col-md-6">
-                <h2>Do you want to look a bit closer ?</h2>
-                <a href="pages/portfolio.html" class=""> See My Portfolio</a>
+        <div class="container">
+            <div class="col-md-12">
+                <div class="h-portf-cont">
+                    <h2>Do you want to look a bit closer ?</h2>
+                    <a href="pages/portfolio.html" class="homebtn hom-portf-btn"> See My Portfolio</a>
+                </div>
             </div>
         </div>
     </section>
@@ -53,21 +55,21 @@
                 <div class="col-md-12">
                     <div class="bho">
                         <h2>Connect to my world</h2>
-                        <a href="#" class=""> Blog</a>
+                        <a href="#" class="homebtn h-blog-btn"> Blog</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section class="h-about">
-        <div class="container-fluid">
+        <div class="container">
             <h2>Mustafa Katipoğlu</h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="h-a-m">
                         <img src="img/me.jpg" alt="my photograph">
                         <p>Hey, I'm an full stack web developer student from Istanbul , Turkey...</p>
-                        <a href="#" class="">About Me</a>
+                        <a href="#" class="homebtn h-about-btn">About Me</a>
                     </div>
                 </div>
                 
