add about page skeleton and make fix some images in index page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <a class="btn h-btn" href="index.html">Home</a>
                         <a class="btn h-btn" href="pages/portfolio.html">Portfolio</a>
                         <a class="btn h-btn" href="#">Blog</a>
-                        <a class="btn h-btn" href="#">About</a>
+                        <a class="btn h-btn" href="pages/about.html">About</a>
                     </section>
                 </div>
             </div>
