--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,7 +22,7 @@
                         <a class="btn h-btn" href="../index.html">Home</a>
                         <a class="btn h-btn" href="portfolio.html">Portfolio</a>
                         <a class="btn h-btn" href="#">Blog</a>
-                        <a class="btn h-btn" href="#">About</a>
+                        <a class="btn h-btn" href="about.html">About</a>
                     </section>
                 </div>
             </div>
