add jquery to portfolio, fix general layout

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <section class="logo">
-                        <h1>Mustafa Katipoglu</h1>
+                        <a href="index.html"><h1>Mustafa Katipoglu</h1></a>
                     </section>
                 </div>
                 <div class="col-md-8">
@@ -69,7 +69,7 @@
                     <div class="h-a-m">
                         <img src="img/me.jpg" alt="my photograph">
                         <p>Hey, I'm an full stack web developer student from Istanbul , Turkey...</p>
-                        <a href="#" class="homebtn h-about-btn">About Me</a>
+                        <a href="pages/about.html" class="homebtn h-about-btn">About Me</a>
                     </div>
                 </div>
                 
@@ -82,10 +82,10 @@
                 <div class="col-md-4 pull-left">
                     <ul class="f-nav">
                         <h4>Menu</h4>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>Portfolio</li></a>
+                        <a href="index.html"><li>Home</li></a>
+                        <a href="pages/portfolio.html"><li>Portfolio</li></a>
                         <a href="#"><li>Blog</li></a>
-                        <a href="#"><li>About</li></a>
+                        <a href="pages/about.html"><li>About</li></a>
                     </ul>
                 </div>
                 <div class="col-md-4">
