--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <section class="logo">
-                        <h1>Mustafa Katipoglu</h1>
+                        <a href="../index.html"><h1>Mustafa Katipoglu</h1></a>
                     </section>
                 </div>
                 <div class="col-md-8">
@@ -33,13 +33,6 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="bytag">
-                        <h2>I love to programming</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 pull-right">
-                    <div class="bytag">
                         <h2>Everything is just starting</h2>
                     </div>
                 </div>
@@ -47,33 +40,41 @@
         </div>
     </section>
     <section class="h-portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-7 pull-left"></div>
-                <div class="col-md-5 pull-right">
-                    <div class="h-portf-btns">
-                        <a class="btn p-btn">Html &#126; CSS</a>
-                        <a class="btn p-btn">JavaScript</a>
-                        <a class="btn p-btn">Jquery</a>
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="h-portf-btns">
+                            <a class="btn p-btn allBtn">ALL</a>
+                            <a class="btn p-btn htmlCssBtn">Html &#126; CSS</a>
+                            <a class="btn p-btn jsBtn">JavaScript</a>
+                            <a class="btn p-btn jqueryBtn">Jquery</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                    <div class="col-md-1 portf-item">
-                        <div class="p-item" id="item1"></div>
+            <div class="container-fluid">
+                    <div class="portf-item">
+                        <div class="p-item item1 allItems htmlCss"></div>
+                            <a class="portLink" href="../projects/teslaTributePageVersion2/index.html"></a>
+                        <div class="p-item item2 allItems javascript htmlCss"></div>
+                            <a class="portLink" href="../projects/sketchpad/index.html"></a>
+                        <div class="p-item item3 allItems htmlCss jquery javascript"></div>
+                            <a class="portLink" href="../index.html"></a>
+                        <div class="p-item item4 allItems javascript htmlCss"></div>
+                            <a class="portLink" href="../projects/mathsGame/index.html"></a>
+                        <div class="p-item item5 allItems htmlCss"></div>
+                            <a class="portLink" href="../projects/googleHomepage/index.html"></a>
                     </div>
-                    <div class="col-md-1 portf-item">
-                        <div class="p-item" id="item2"></div>
-                    </div>
-                    <div class="col-md-1 portf-item">
-                        <div class="p-item" id="item3"></div>
-                    </div>
-                    <div class="col-md-1 portf-item">
-                        <div class="p-item" id="item4"></div>
-                    </div>
-                    <div class="col-md-1 portf-item">
-                        <div class="p-item" id="item5"></div>
-                    </div>
+            </div>
+            <div class="bigItem" id="showbig">
+                <div class="b-i-newWindow">
+                    <a class="newWindow" href=""><img src="../img/newWindow.png"></a>
+                </div>
+                <div class="b-i-remWindow pull-right">
+                    <img class="b-i-remWindow" src="../img/removebtn.svg">
+                    
+                </div>
             </div>
         </div>
     </section>
@@ -83,10 +84,10 @@
                 <div class="col-md-4 pull-left">
                     <ul class="f-nav">
                         <h4>Menu</h4>
-                        <a href="#"><li>Home</li></a>
-                        <a href="#"><li>Portfolio</li></a>
+                        <a href="../index.html"><li>Home</li></a>
+                        <a href="portfolio.html"><li>Portfolio</li></a>
                         <a href="#"><li>Blog</li></a>
-                        <a href="#"><li>About</li></a>
+                        <a href="about.html"><li>About</li></a>
                     </ul>
                 </div>
                 <div class="col-md-4">
