--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -79,9 +79,8 @@
         </div>
     </section>
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 pull-left">
+        <div class="container-fluid">
+                <div class="footerLeft footerSec">
                     <ul class="f-nav">
                         <h4>Menu</h4>
                         <a href="../index.html"><li>Home</li></a>
@@ -90,10 +89,7 @@
                         <a href="about.html"><li>About</li></a>
                     </ul>
                 </div>
-                <div class="col-md-4">
-                        <p class="f-copy">&copy;2017</p>
-                </div>
-                <div class="col-md-4 pull-right">
+                <div class="footerCenter footerSec">
                     <div class="f-social">
                         <h4>Social Links</h4>
                         <figure>
@@ -113,7 +109,9 @@
                         </figure>
                     </div>
                 </div>
-            </div>
+                <div class="footerRight footerSec">
+                        <p class="f-copy">&copy;2017</p>
+                </div>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
