add mini boxes in BigItem

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -55,15 +55,15 @@
             </div>
             <div class="container-fluid">
                     <div class="portf-item">
-                        <div class="p-item item1 allItems htmlCss"></div>
+                        <div class="p-item item1 allItems htmlCss" id="portfItem1"></div>
                             <a class="portLink" href="../projects/teslaTributePageVersion2/index.html"></a>
-                        <div class="p-item item2 allItems javascript htmlCss"></div>
+                        <div class="p-item item2 allItems javascript htmlCss" id="portfItem2"></div>
                             <a class="portLink" href="../projects/sketchpad/index.html"></a>
-                        <div class="p-item item3 allItems htmlCss jquery javascript"></div>
+                        <div class="p-item item3 allItems htmlCss jquery javascript" id="portfItem3"></div>
                             <a class="portLink" href="../index.html"></a>
-                        <div class="p-item item4 allItems javascript htmlCss"></div>
+                        <div class="p-item item4 allItems javascript htmlCss" id="portfItem4"></div>
                             <a class="portLink" href="../projects/mathsGame/index.html"></a>
-                        <div class="p-item item5 allItems htmlCss"></div>
+                        <div class="p-item item5 allItems htmlCss" id="portfItem5"></div>
                             <a class="portLink" href="../projects/googleHomepage/index.html"></a>
                     </div>
             </div>
@@ -73,45 +73,49 @@
                 </div>
                 <div class="b-i-remWindow pull-right">
                     <img class="b-i-remWindow" src="../img/removebtn.svg">
-                    
+                </div>
+                <div class="bigItemOterPictures">
+                    <div class="BigItemPicture" id="BıgItemP1"></div>
+                    <div class="BigItemPicture" id="BıgItemP2"></div>
+                    <div class="BigItemPicture" id="BıgItemP3"></div>
                 </div>
             </div>
         </div>
     </section>
     <footer>
         <div class="container-fluid">
-                <div class="footerLeft footerSec">
-                    <ul class="f-nav">
-                        <h4>Menu</h4>
-                        <a href="../index.html"><li>Home</li></a>
-                        <a href="portfolio.html"><li>Portfolio</li></a>
-                        <a href="#"><li>Blog</li></a>
-                        <a href="about.html"><li>About</li></a>
-                    </ul>
+            <div class="footerLeft footerSec">
+                <ul class="f-nav">
+                    <h4>Menu</h4>
+                    <a href="../index.html"><li>Home</li></a>
+                    <a href="portfolio.html"><li>Portfolio</li></a>
+                    <a href="#"><li>Blog</li></a>
+                    <a href="about.html"><li>About</li></a>
+                </ul>
+            </div>
+            <div class="footerCenter footerSec">
+                <div class="f-social">
+                    <h4>Social Links</h4>
+                    <figure>
+                        <a href="mailto:mustafakatipoglu98@hotmail.com"><img src="../img/email.svg" alt="send email"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://www.facebook.com/m.ktpql"><img src="../img/facebook-logo.svg" alt="facebook social icon"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://github.com/herolenk"><img src="../img/github-logo.svg" alt="github social icon"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://www.linkedin.com/in/mustafakatipoglu/"><img src="../img/linkedin.svg" alt="linkedin social icon"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://medium.com/@herolenk"><img src="../img/medium.svg" alt="medius social icon"></a>
+                    </figure>
                 </div>
-                <div class="footerCenter footerSec">
-                    <div class="f-social">
-                        <h4>Social Links</h4>
-                        <figure>
-                            <a href="mailto:mustafakatipoglu98@hotmail.com"><img src="../img/email.svg" alt="send email"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://www.facebook.com/m.ktpql"><img src="../img/facebook-logo.svg" alt="facebook social icon"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://github.com/herolenk"><img src="../img/github-logo.svg" alt="github social icon"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://www.linkedin.com/in/mustafakatipoglu/"><img src="../img/linkedin.svg" alt="linkedin social icon"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://medium.com/@herolenk"><img src="../img/medium.svg" alt="medius social icon"></a>
-                        </figure>
-                    </div>
-                </div>
-                <div class="footerRight footerSec">
+            </div>
+            <div class="footerRight footerSec">
                         <p class="f-copy">&copy;2017</p>
-                </div>
+            </div>
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
