--- a/pages/about.html
+++ b/pages/about.html
@@ -78,40 +78,38 @@ At the same time, I’m  computer engineering student at Istanbul, Yıldız Tech
         </div>
     </section>
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 pull-left">
-                    <ul class="f-nav">
-                        <h4>Menu</h4>
-                        <a href="../index.html"><li>Home</li></a>
-                        <a href="portfolio.html"><li>Portfolio</li></a>
-                        <a href="#"><li>Blog</li></a>
-                        <a href="about.html"><li>About</li></a>
-                    </ul>
+        <div class="container-fluid">
+            <div class="footerLeft footerSec">
+                <ul class="f-nav">
+                    <h4>Menu</h4>
+                    <a href="../index.html"><li>Home</li></a>
+                    <a href="portfolio.html"><li>Portfolio</li></a>
+                    <a href="#"><li>Blog</li></a>
+                    <a href="about.html"><li>About</li></a>
+                </ul>
+            </div>
+            <div class="footerCenter footerSec">
+                <div class="f-social">
+                    <h4>Social Links</h4>
+                    <figure>
+                        <a href="mailto:mustafakatipoglu98@hotmail.com"><img src="../img/email.svg" alt="send email"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://www.facebook.com/m.ktpql"><img src="../img/facebook-logo.svg" alt="facebook social icon"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://github.com/herolenk"><img src="../img/github-logo.svg" alt="github social icon"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://www.linkedin.com/in/mustafakatipoglu/"><img src="../img/linkedin.svg" alt="linkedin social icon"></a>
+                    </figure>
+                    <figure>
+                        <a href="https://medium.com/@herolenk"><img src="../img/medium.svg" alt="medius social icon"></a>
+                    </figure>
                 </div>
-                <div class="col-md-4">
+            </div>
+            <div class="footerRight footerSec">
                         <p class="f-copy">&copy;2017</p>
-                </div>
-                <div class="col-md-4 pull-right">
-                    <div class="f-social">
-                        <h4>Social Links</h4>
-                        <figure>
-                            <a href="mailto:mustafakatipoglu98@hotmail.com"><img src="../img/email.svg" alt="send email"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://www.facebook.com/m.ktpql"><img src="../img/facebook-logo.svg" alt="facebook social icon"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://github.com/herolenk"><img src="../img/github-logo.svg" alt="github social icon"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://www.linkedin.com/in/mustafakatipoglu/"><img src="../img/linkedin.svg" alt="linkedin social icon"></a>
-                        </figure>
-                        <figure>
-                            <a href="https://medium.com/@herolenk"><img src="../img/medium.svg" alt="medius social icon"></a>
-                        </figure>
-                    </div>
-                </div>
             </div>
         </div>
     </footer>
