--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -72,12 +72,12 @@
                     <a class="newWindow" href=""><img src="../img/newWindow.png"></a>
                 </div>
                 <div class="b-i-remWindow pull-right">
-                    <img class="b-i-remWindow" src="../img/removebtn.svg">
+                    <img src="../img/removebtn.svg">
                 </div>
                 <div class="bigItemOterPictures">
-                    <div class="BigItemPicture" id="BıgItemP1"></div>
-                    <div class="BigItemPicture" id="BıgItemP2"></div>
-                    <div class="BigItemPicture" id="BıgItemP3"></div>
+                    <div class="BigItemPicture" id="bigItemP1"></div>
+                    <div class="BigItemPicture" id="bigItemP2"></div>
+                    <div class="BigItemPicture" id="bigItemP3"></div>
                 </div>
             </div>
         </div>
