--- a/pages/about.html
+++ b/pages/about.html
@@ -33,7 +33,7 @@
             <article class="aboutme">
                     <div class="aboutmecopy">
                         <h2>Who am I?</h2>
-                        <p>I’m 19 years and I really love to coding.Everyday I’m trying to make my computer skills perfect and I believe I'm following through my tasks successfully.Currently, I haven’t choosen my area in computer world but I’m giving all areas a try , i guess i will stop when I find passion...</p><p>
+                        <p>I’m 19 years and I really love coding.Everyday I’m trying to make my computer skills perfect and I believe I'm following through my tasks successfully.Currently, I haven’t choosen my area in computer world but I’m giving all areas a try , i guess i will stop when I find passion...</p><p>
 At the same time, I’m  computer engineering student at Istanbul, Yıldız Technical University as of september 2017.That’s it &#x263A;
 </p>
                     </div>
